--- a/myfile.html
+++ b/myfile.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple HTML Page</title>
+  <title>Short HTML</title>
 </head>
 <body>
-    <h1>Welcome to My Simple HTML Page</h1>
-    <p>This is a basic HTML page with a heading, a paragraph, and a link.</p>
-    <a href="https://www.example.com" target="_blank">Click here to visit Example.com</a>
+  <h1>Hello, World!</h1>
 </body>
 </html>
